--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- TODO: Set the document title to the name of your application -->
     <title>Aniversário do Samuel</title>
     <meta name="description" content="Convite de Aniversário do Samuel" />
-    <meta name="author" content="Maicon" />
+    <meta name="author" content="lovable" />
 
     <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="Aniversário do Samuel" />
